--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
   mtproxy:
-    image: alexdoesh/mtproxy
+    image: masterx46/mtproxy_l
     container_name: mtproxy
     restart: always
     # command: --add --your --commands
@@ -14,10 +14,9 @@ services:
       - ./config:/data
     ports:
       - "2398:2398"
-      - "443:443"
+      - "8843:8843"
     networks:
       - tg_stack
 
 networks:
   tg_stack:
-
